@@ -1,4 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX genkernel.bash 2438 RMD160 b3d8e4436d8768c07d18c5aaff9c14fc16641729 SHA1 e15a9c6ef506aa6872a6a97d26751246dedded04 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248
-EBUILD genkernel-999999.ebuild 2115 RMD160 9c0a1f8ee2a648e0f996b85ffe59d2665652b83d SHA1 a27e17481657515bdcf4be2beeb161d0cf437f37 SHA256 9852f3ad00b32e288ba7432f1ea50881ef1d6a161dbbfefac3f05047453e7dd5
-MISC ChangeLog 1630 RMD160 2f0087aebd743c651eab432e20ef6b107111f5ff SHA1 2e5d8401993cf51c6dfde15de934cabfd5b3f931 SHA256 c51a76bc299c0ace23470084cffee51ed18cc5cf1499d11ce2887f1b764ca7df
+EBUILD genkernel-999999.ebuild 3638 RMD160 7d16b13c9c725f03ee58ae5d7932234b0fd7f087 SHA1 f1f3980794bf993686b3c1469b3e07298cc9fb63 SHA256 30893fb94762599bac1291c11589831dfd7d0638fb1bc608fcdc2a37e364b891
+MISC ChangeLog 1810 RMD160 2b0403662f73607242b84bcd3dc82824e4f08851 SHA1 aba412227a2b3ca10cd2e4b3f8ad1c06d4655f66 SHA256 3ce9b2d94247da00696b25feab3d1a40f8d7da87128bd284ba4dc5b0cb70743b
 MISC metadata.xml 262 RMD160 0e2d90292964d831d63fc5a3167fb222bbe45468 SHA1 93ade0920111413a7e4b7fb340d371209e0c01a1 SHA256 8ad68efc2acfc2f8d98227b14bcd44771c3d35d41c03c722e267822a55d64edf
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJOQmd7AAoJEPATRTHh2/q1mfEH/iE7t2ylSyEIYxkMzLy59540
+J71g+RttTAAu0iw9dYcAO5WGrV4BXtsd6bPcrjR1bFw0P6oQyoxnpm1hvCdCCvGw
+PMjmjQfqxnnswVRtcIfUHowbDl7Cheldu+kfRA1ZG7Iwfu13NLomgcnuPH5yo7N0
+oN0PFniw5bUdIyE65Xs9VhArnmY4p6WlFmY5UKbnLowO9tDbZOMQHDENv/6yq44K
+de770uHF9m4uvoQ4eSSqSG5hLLHxyUua1SwzwiykhDAGjljJLTjwL+QVg9YS5xh7
+BwFxrhI0k4O3D7MbT2nodtuclFPSu0R5VHQpTrwI34RwheG8TN7f1GJfuzuGEpo=
+=YiXF
+-----END PGP SIGNATURE-----
