@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Aug 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
+  genkernel-999999.ebuild:
+  Synced with genkernel-9999.ebuild from Portage.
+
+  dracut dependency has been bumped to 010.
+
 *genkernel-999999 (26 Mar 2011)
 
   26 Mar 2011; Amadeusz Żołnowski <aidecoe@gentoo.org>
